Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-106374

Unable to build qtbase due to incomplete type in qtessellator.cpp

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.15.11, 6.5.0 Beta1
    • 6.4.0 Beta4
    • QPA: X11/XCB
    • None
    • Linux/X11, Linux/Other display system
    • 2585fa7c09 (qt/qtbase/dev) 2585fa7c09 (qt/tqtc-qtbase/dev) f47de579f6 (qt/qtbase/6.4) 3c62097e47 (qt/qtbase/6.3) 3c62097e47 (qt/tqtc-qtbase/6.3) f47de579f6 (qt/tqtc-qtbase/6.4) e9b2d3198a (qt/tqtc-qtbase/5.15)

    Description

      Error:

      FAILED: src/plugins/platforms/xcb/CMakeFiles/XcbQpaPrivate.dir/nativepainting/qtessellator.cpp.o 
      /usr/bin/c++ -DQT_ASCII_CAST_WARNINGS -DQT_BUILDING_QT -DQT_BUILD_XCB_PLUGIN -DQT_BUILD_XCB_QPA_LIB_LIB -DQT_CORE_LIB -DQT_DEPRECATED_WARNINGS -DQT_DEPRECATED_WARNINGS_SINCE=0x070000 -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_GUI_LIB -DQT_LEAN_HEADERS=1 -DQT_MOC_COMPAT -DQT_NO_CAST_TO_ASCII -DQT_NO_EXCEPTIONS -DQT_NO_FOREACH -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_OPENGL_LIB -DQT_USE_QSTRINGBUILDER -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/src/plugins/platforms/xcb/XcbQpaPrivate_autogen/include -I/mnt/vcpkg-ci/buildtrees/qtbase/src/fd5cae19b2-e33b638386.clean/src/plugins/platforms/xcb -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/src/plugins/platforms/xcb -I/mnt/vcpkg-ci/buildtrees/qtbase/src/fd5cae19b2-e33b638386.clean/src/plugins/platforms/xcb/gl_integrations -I/mnt/vcpkg-ci/buildtrees/qtbase/src/fd5cae19b2-e33b638386.clean/src/plugins/platforms/xcb/nativepainting -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/src/corelib -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include/QtCore/6.4.0 -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include/QtCore/6.4.0/QtCore -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include/QtCore -I/mnt/vcpkg-ci/buildtrees/qtbase/src/fd5cae19b2-e33b638386.clean/mkspecs/linux-g++ -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/src/gui -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include/QtGui/6.4.0 -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include/QtGui/6.4.0/QtGui -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include/QtGui -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/src/opengl -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include/QtOpenGL/6.4.0 -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include/QtOpenGL/6.4.0/QtOpenGL -I/mnt/vcpkg-ci/buildtrees/qtbase/x64-linux-dbg/include/QtOpenGL -isystem /mnt/vcpkg-ci/installed/x64-linux/include -fPIC -g -fPIC -fvisibility=hidden -fvisibility-inlines-hidden -Wall -Wextra -fno-exceptions -fPIC -ffunction-sections -fdata-sections -Wsuggest-override -fcf-protection -std=c++17 -MD -MT src/plugins/platforms/xcb/CMakeFiles/XcbQpaPrivate.dir/nativepainting/qtessellator.cpp.o -MF src/plugins/platforms/xcb/CMakeFiles/XcbQpaPrivate.dir/nativepainting/qtessellator.cpp.o.d -o src/plugins/platforms/xcb/CMakeFiles/XcbQpaPrivate.dir/nativepainting/qtessellator.cpp.o -c /mnt/vcpkg-ci/buildtrees/qtbase/src/fd5cae19b2-e33b638386.clean/src/plugins/platforms/xcb/nativepainting/qtessellator.cpp
      /mnt/vcpkg-ci/buildtrees/qtbase/src/fd5cae19b2-e33b638386.clean/src/plugins/platforms/xcb/nativepainting/qtessellator.cpp:192:19: error: field ‘intersections’ has incomplete type ‘QTessellatorPrivate::Intersections’ {aka ‘QMap<QTessellatorPrivate::Intersection, QTessellatorPrivate::IntersectionLink>’}
       192 | Intersections intersections;
       | ^~~~~~~~~~~~~

      (full config and build logs attached)

      Attachments

        For Gerrit Dashboard: QTBUG-106374
        # Subject Branch Project Status CR V

        Activity

          People

            liaqi Liang Qi
            neumann-a Alexander Neumann
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes