xcb: fix the build of native painting

Fixes: QTBUG-106374
Change-Id: I91871078a0e09cdda8db4afd236a9746c72007f7
Reviewed-by: Tor Arne Vestbø <tor.arne.vestbo@qt.io>
Reviewed-by: JiDe Zhang <zhangjide@uniontech.com>
(cherry picked from commit 2585fa7c091715ba4766bf58a75ae8f632dbb37f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>